--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "4.20",
     "axios": "^0.27.2",
     "react": "^18.1.0",
@@ -18,7 +19,7 @@
     "redux-thunk": "^2.4.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "set PORT=3000 && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
   },
